Tests/context/invalid/class24.java
class A {
    int x;
}
class A1 extends A{
    int x1;
}
class A2 extends A{
    int x2;
}

class A3 extends A1{
    int x3;
}

{
    A2 a2 = new A2();
    a2.x1=5;
}